# catalog/pkg/openapi/model_agent_preview_result.go
@@ -1,146 +1,0 @@
-/*
-Catalog REST API
-
-REST API for Kubeflow Hub Catalog
-
-API version: v1alpha1
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package openapi
-
-import (
-	"encoding/json"
-)
-
-// checks if the AgentPreviewResult type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &AgentPreviewResult{}
-
-// AgentPreviewResult Preview result for a single agent showing inclusion status.
-type AgentPreviewResult struct {
-	// Agent name.
-	Name string `json:"name"`
-	// Whether this agent would be included based on the configured filters.
-	Included bool `json:"included"`
-}
-
-type _AgentPreviewResult AgentPreviewResult
-
-// NewAgentPreviewResult instantiates a new AgentPreviewResult object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewAgentPreviewResult(name string, included bool) *AgentPreviewResult {
-	this := AgentPreviewResult{}
-	this.Name = name
-	this.Included = included
-	return &this
-}
-
-// NewAgentPreviewResultWithDefaults instantiates a new AgentPreviewResult object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewAgentPreviewResultWithDefaults() *AgentPreviewResult {
-	this := AgentPreviewResult{}
-	return &this
-}
-
-// GetName returns the Name field value
-func (o *AgentPreviewResult) GetName() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Name
-}
-
-// GetNameOk returns a tuple with the Name field value
-// and a boolean to check if the value has been set.
-func (o *AgentPreviewResult) GetNameOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Name, true
-}
-
-// SetName sets field value
-func (o *AgentPreviewResult) SetName(v string) {
-	o.Name = v
-}
-
-// GetIncluded returns the Included field value
-func (o *AgentPreviewResult) GetIncluded() bool {
-	if o == nil {
-		var ret bool
-		return ret
-	}
-
-	return o.Included
-}
-
-// GetIncludedOk returns a tuple with the Included field value
-// and a boolean to check if the value has been set.
-func (o *AgentPreviewResult) GetIncludedOk() (*bool, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Included, true
-}
-
-// SetIncluded sets field value
-func (o *AgentPreviewResult) SetIncluded(v bool) {
-	o.Included = v
-}
-
-func (o AgentPreviewResult) MarshalJSON() ([]byte, error) {
-	toSerialize, err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o AgentPreviewResult) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["name"] = o.Name
-	toSerialize["included"] = o.Included
-	return toSerialize, nil
-}
-
-type NullableAgentPreviewResult struct {
-	value *AgentPreviewResult
-	isSet bool
-}
-
-func (v NullableAgentPreviewResult) Get() *AgentPreviewResult {
-	return v.value
-}
-
-func (v *NullableAgentPreviewResult) Set(val *AgentPreviewResult) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableAgentPreviewResult) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableAgentPreviewResult) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableAgentPreviewResult(val *AgentPreviewResult) *NullableAgentPreviewResult {
-	return &NullableAgentPreviewResult{value: val, isSet: true}
-}
-
-func (v NullableAgentPreviewResult) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableAgentPreviewResult) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
